--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,16 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+
+*.h diff merge text
+*.cpp diff merge text
+*.cs diff merge text
+
+# All maps are LFS.
+*.umap filter=lfs diff=lfs merge=lfs -text
+*.uasset filter=lfs diff=lfs merge=lfs -text
+
+# Some Build Files (though the PDB may be ignored if desired)
+*.dll filter=lfs diff=lfs merge=lfs -text
+*.pdb filter=lfs diff=lfs merge=lfs -text
+*.lib filter=lfs diff=lfs merge=lfs -text
