--- a/Serotopia_Grey_1/Saved/Config/Windows/Engine.ini
+++ b/Serotopia_Grey_1/Saved/Config/Windows/Engine.ini
@@ -46,4 +46,12 @@ DisplayGamma=2.000000
 [/Script/UnrealEd.EditorEngine]
 FlipNormalMapGreenChannel=False
 
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=True
+ToggleKeysHotkey=True
+FilterKeysHotkey=True
+StickyKeysConfirmation=True
+ToggleKeysConfirmation=True
+FilterKeysConfirmation=True
+
 
