--- a/Serotopia_Grey_1/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Serotopia_Grey_1/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -187,7 +187,7 @@ DisappearBridge_C=
 DisappearBridge1_C=StaticMeshComponent.Collision.Collision,
 DisappearBridge2_C=StaticMeshComponent.Collision.Collision,
 DisappearBridge3_C=BoxComponent.Collision.Collision,
-Mechanic_Test_C=StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,ThirdPersonCharacter_C.Rendering.LOD,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Lens,StructProperty.DefaultValueCategory.None,
+Mechanic_Test_C=
 ChefGnome_C=
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,
 Chef_Ani_C=
@@ -309,26 +309,26 @@ None=======
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/LightPickupActor_Blueprint
-MRUItem1=/Game/Blueprints/AOE_Decal1
-MRUItem2=/Game/Blueprints/AOE_Decal
-MRUItem3=/Game/Levels/testYellow
-MRUItem4=/Game/Levels/Forest
-MRUItem5=/Game/Blueprints/Mechanic_Test
-MRUItem6=/Game/Blueprints/UI/MainMenu
-MRUItem7=/Game/Blueprints/AO1E
-MRUItem8=/Game/Blueprints/UI/HUD
-MRUItem9=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem10=/Game/Levels/Bubbleopolis
-MRUItem11=/Game/Levels/Blue_paint
-MRUItem12=/Game/Levels/Puzzle_Chain_Test_1
-MRUItem13=/Game/Levels/RedTesting
-MRUItem14=/Game/Levels/TechDemo
-MRUItem15=/Game/Blueprints/UI/TestLevels
-MRUItem16=/Game/Bubbleopolis/NewFolder/Bubble_brick_texture_01_Mat_Inst
-MRUItem17=/Game/Bubbleopolis/meshes/Ground
-MRUItem18=/Game/Bubbleopolis/Ground_Inst
-MRUItem19=/Game/Bubbleopolis/meshes/Ground_Inst
+MRUItem0=/Game/Blueprints/AOE_Decal
+MRUItem1=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
+MRUItem2=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem3=/Game/Blueprints/AO1E
+MRUItem4=/Game/Levels/testYellow
+MRUItem5=/Game/Blueprints/LightPickupActor_Blueprint
+MRUItem6=/Game/Blueprints/AOE_Decal1
+MRUItem7=/Game/Levels/Forest
+MRUItem8=/Game/Blueprints/Mechanic_Test
+MRUItem9=/Game/Blueprints/UI/MainMenu
+MRUItem10=/Game/Blueprints/UI/HUD
+MRUItem11=/Game/Levels/Bubbleopolis
+MRUItem12=/Game/Levels/Blue_paint
+MRUItem13=/Game/Levels/Puzzle_Chain_Test_1
+MRUItem14=/Game/Levels/RedTesting
+MRUItem15=/Game/Levels/TechDemo
+MRUItem16=/Game/Blueprints/UI/TestLevels
+MRUItem17=/Game/Bubbleopolis/NewFolder/Bubble_brick_texture_01_Mat_Inst
+MRUItem18=/Game/Bubbleopolis/meshes/Ground
+MRUItem19=/Game/Bubbleopolis/Ground_Inst
 
 [DetailCategories]
 Brush.TransformCommon=True
@@ -2969,7 +2969,7 @@ ProgressBar="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" 
 WorldSettings="\"Object.Lightmass.LightmassSettings\" "
 Info=
 TestLevels_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-AO1E_C="\"Object.HitNormal\" \"Object.HitNormal\" "
+AO1E_C=
 MainMenu_C=
 
 [PlacementMode]
@@ -3002,7 +3002,7 @@ bHideUnrelatedNodes=False
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/Mechanic_Test.Mechanic_Test=0
 /Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode=1
-/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
+/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=0
 /Game/ThirdPersonBP/ThirdPersonOverview.ThirdPersonOverview=1
 /Game/Blueprints/paint1.paint1=1
 /Game/Blueprints/paint2.paint2=1
@@ -3411,7 +3411,7 @@ ScreenPosition=X=867.000 Y=32.000
 ScreenPosition=X=867.500 Y=32.500
 ScreenPosition=X=555.000 Y=13.500
 ScreenPosition=X=555.200 Y=13.600
-ScreenPosition=X=230.000 Y=70.000
+ScreenPosition=X=-1136.000 Y=66.000
 WindowSize=X=890.000 Y=1030.000
 WindowSize=X=890.000 Y=1034.000
 WindowSize=X=897.000 Y=821.000
@@ -4329,7 +4329,7 @@ PreviewMaterial.Material=True
 ChefGnome_C.Animation=True
 Spring_Gnome_C.Animation=True
 Mush_Gnome_C.Animation=True
-K2Node_VariableGet.Variable=True
+K2Node_VariableGet.Variable=False
 ChefGnome_C.Rendering=True
 Spring_Gnome_C.Rendering=True
 Mush_Gnome_C.Rendering=True
