some project file changes
making the game mode default correctly

--- a/Serotopia_Grey_1/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Serotopia_Grey_1/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -121,7 +121,7 @@ User Created=False
 Advanced=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Audio
+ContentBrowserTab1.SelectedPaths=/Game
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -152,16 +152,17 @@ LastLevel=/Engine/Maps/Templates/Template_Default
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Audio/Music/ForestHarpVio
-MRUItem1=/Game/Audio/Music/BubbleFactoryColor
-MRUItem2=/Game/Audio/SFX/Wavs/Collapse01
-MRUItem3=/Game/Audio/SFX/Cues/Collapse_Cue
-MRUItem4=/Game/Audio/SFX/Cues/Steam01_Cue
-MRUItem5=/Game/Audio/Bubbleoplis_SoundMix
-MRUItem6=/Game/Audio/Sound_Controls
-MRUItem7=/Game/Blueprints/Sound/BGM/MasterMix
-MRUItem8=/Game/Audio/Bubbleopolis_MAster
-MRUItem9=/Game/Audio/NewSoundMix
+MRUItem0=/Engine/Maps/Templates/Template_Default
+MRUItem1=/Game/Audio/Music/ForestHarpVio
+MRUItem2=/Game/Audio/Music/BubbleFactoryColor
+MRUItem3=/Game/Audio/SFX/Wavs/Collapse01
+MRUItem4=/Game/Audio/SFX/Cues/Collapse_Cue
+MRUItem5=/Game/Audio/SFX/Cues/Steam01_Cue
+MRUItem6=/Game/Audio/Bubbleoplis_SoundMix
+MRUItem7=/Game/Audio/Sound_Controls
+MRUItem8=/Game/Blueprints/Sound/BGM/MasterMix
+MRUItem9=/Game/Audio/Bubbleopolis_MAster
+MRUItem10=/Game/Audio/NewSoundMix
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -506,7 +507,7 @@ bHideUnrelatedNodes=False
 
 [RootWindow]
 ScreenPosition=X=357.000 Y=240.000
-WindowSize=X=1280.000 Y=720.000
+WindowSize=X=1285.000 Y=725.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -523,7 +524,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
+UNR=../../../Engine/Content/Maps/Templates
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBXAnim=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -1241,5 +1242,8 @@ SequencerWidgets.TimeStamp=2021.01.28-02.42.50
 SequencerWidgets.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2021.01.28-02.42.44
 ExternalImagePicker.LastCompileMethod=Unknown
+
+[MRU]
+MRUItem0=/Engine/Maps/Templates/Template_Default
 
 
