--- a/Serotopia_Grey_1/Config/DefaultEngine.ini
+++ b/Serotopia_Grey_1/Config/DefaultEngine.ini
@@ -5,3 +5,8 @@ DefaultSoundClassName=/Game/Audio/Bubbleopolis_SFX.Bubbleopolis_SFX
 DefaultBaseSoundMix=/Game/Audio/Bubbleoplis_SoundMix.Bubbleoplis_SoundMix
 DefaultMediaSoundClassName=/Game/Audio/Bubbleopolis_MAster.Bubbleopolis_Master
 
+[/Script/EngineSettings.GameMapsSettings]
+GlobalDefaultGameMode=/Game/Blueprints/Gamemodes/Mechanic_Test.Mechanic_Test_C
+EditorStartupMap=/Game/Levels/MainMenu.MainMenu
+GameDefaultMap=/Game/Levels/MainMenu.MainMenu
+
