Organizing the Audio folder wavs and cues, added Menu_Save sfx, added MonkeyBars model

--- a/Serotopia_Grey_1/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Serotopia_Grey_1/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -66,7 +66,7 @@ PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
 AdditionalLaunchParametersForMobile=
-BuildGameBeforeLaunch=PlayOnBuild_Default
+BuildGameBeforeLaunch=PlayOnBuild_Never
 LaunchConfiguration=LaunchConfig_Default
 bAutoCompileBlueprintsOnLaunch=True
 PlayNetMode=PIE_Standalone
@@ -83,8 +83,8 @@ ServerMapNameOverride=
 AdditionalServerGameOptions=
 AdditionalLaunchOptions=
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-MultipleInstanceLastHeight=0
-MultipleInstanceLastWidth=0
+MultipleInstanceLastHeight=720
+MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-0L4MRIP
 LastExecutedLaunchName=DESKTOP-0L4MRIP
 LastExecutedPIEPreviewDevice=
@@ -121,7 +121,7 @@ User Created=False
 Advanced=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Geometry/Meshes/MonkeyBars
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -146,23 +146,32 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Engine/Maps/Templates/Template_Default
+LastLevel=/Game/Levels/MainMenu
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Engine/Maps/Templates/Template_Default
-MRUItem1=/Game/Audio/Music/ForestHarpVio
-MRUItem2=/Game/Audio/Music/BubbleFactoryColor
-MRUItem3=/Game/Audio/SFX/Wavs/Collapse01
-MRUItem4=/Game/Audio/SFX/Cues/Collapse_Cue
-MRUItem5=/Game/Audio/SFX/Cues/Steam01_Cue
-MRUItem6=/Game/Audio/Bubbleoplis_SoundMix
-MRUItem7=/Game/Audio/Sound_Controls
-MRUItem8=/Game/Blueprints/Sound/BGM/MasterMix
-MRUItem9=/Game/Audio/Bubbleopolis_MAster
-MRUItem10=/Game/Audio/NewSoundMix
+MRUItem0=/Game/Geometry/Meshes/MonkeyBars/MonkeyBars
+MRUItem1=/Game/Blueprints/UI/Widgets/TestLevels
+MRUItem2=/Game/Blueprints/UI/Widgets/Settings
+MRUItem3=/Game/Blueprints/UI/Widgets/MainMenu
+MRUItem4=/Game/Blueprints/UI/Widgets/MagTimer
+MRUItem5=/Game/Blueprints/UI/Widgets/HUD5
+MRUItem6=/Game/Blueprints/UI/Widgets/HUD4
+MRUItem7=/Game/Blueprints/UI/Widgets/HUD3
+MRUItem8=/Game/Blueprints/UI/Widgets/HUD2
+MRUItem9=/Game/Blueprints/UI/Widgets/HUD
+MRUItem10=/Game/Blueprints/UI/Widgets/CrosshairWid
+MRUItem11=/Game/Blueprints/UI/Widgets/QuickSelect
+MRUItem12=/Game/Blueprints/Gamemodes/Mechanic_Test
+MRUItem13=/Game/Blueprints/UI/Widgets/Pause
+MRUItem14=/Game/Blueprints/UI/Widgets/NewWidgetBlueprint
+MRUItem15=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem16=/Engine/Maps/Templates/Template_Default
+MRUItem17=/Game/Audio/Music/ForestHarpVio
+MRUItem18=/Game/Audio/Music/BubbleFactoryColor
+MRUItem19=/Game/Audio/SFX/Wavs/Collapse01
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -401,11 +410,186 @@ SoundWave.Voice Management=True
 SoundWave.Effects=True
 SoundWave.Attenuation=True
 SoundWave.Modulation=True
+MainMenu_C.Default=True
+MainMenu_C.Appearance=True
+MainMenu_C.Designer=True
+MainMenu_C.Input=True
+MainMenu_C.Interaction=True
+MainMenu_C.Performance=True
+MainMenu_C.Layout=True
+MainMenu_C.Behavior=True
+MainMenu_C.Render Transform=True
+MainMenu_C.Accessibility=True
+MainMenu_C.Clipping=True
+MainMenu_C.Navigation=True
+MainMenu_C.Localization=True
+K2Node_VariableGet.Variable=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Clipping=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+ThirdPersonCharacter_C.Default=True
+ThirdPersonCharacter_C.Tick=True
+ThirdPersonCharacter_C.Character=True
+ThirdPersonCharacter_C.Camera=True
+ThirdPersonCharacter_C.Pawn=True
+ThirdPersonCharacter_C.Rendering=True
+ThirdPersonCharacter_C.Replication=True
+ThirdPersonCharacter_C.Collision=True
+ThirdPersonCharacter_C.Input=True
+ThirdPersonCharacter_C.Actor=True
+ThirdPersonCharacter_C.Cooking=True
+ThirdPersonCharacter_C.LOD=True
+NewWidgetBlueprint_C.Appearance=True
+NewWidgetBlueprint_C.Designer=True
+NewWidgetBlueprint_C.Input=True
+NewWidgetBlueprint_C.Interaction=True
+NewWidgetBlueprint_C.Performance=True
+NewWidgetBlueprint_C.Layout=True
+NewWidgetBlueprint_C.Behavior=True
+NewWidgetBlueprint_C.Render Transform=True
+NewWidgetBlueprint_C.Accessibility=True
+NewWidgetBlueprint_C.Clipping=True
+NewWidgetBlueprint_C.Navigation=True
+NewWidgetBlueprint_C.Localization=True
+Pause_C.Default=True
+Pause_C.Appearance=True
+Pause_C.Designer=True
+Pause_C.Input=True
+Pause_C.Interaction=True
+Pause_C.Performance=True
+Pause_C.Layout=True
+Pause_C.Behavior=True
+Pause_C.Render Transform=True
+Pause_C.Accessibility=True
+Pause_C.Clipping=True
+Pause_C.Navigation=True
+Pause_C.Localization=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+MagTimer_C.Default=True
+MagTimer_C.Appearance=True
+MagTimer_C.Designer=True
+MagTimer_C.Input=True
+MagTimer_C.Interaction=True
+MagTimer_C.Performance=True
+MagTimer_C.Layout=True
+MagTimer_C.Behavior=True
+MagTimer_C.Render Transform=True
+MagTimer_C.Accessibility=True
+MagTimer_C.Clipping=True
+MagTimer_C.Navigation=True
+MagTimer_C.Localization=True
+QuickSelect_C.Default=True
+QuickSelect_C.Appearance=True
+QuickSelect_C.Designer=True
+QuickSelect_C.Input=True
+QuickSelect_C.Interaction=True
+QuickSelect_C.Performance=True
+QuickSelect_C.Layout=True
+QuickSelect_C.Behavior=True
+QuickSelect_C.Render Transform=True
+QuickSelect_C.Accessibility=True
+QuickSelect_C.Clipping=True
+QuickSelect_C.Navigation=True
+QuickSelect_C.Localization=True
+Mechanic_Test_C.Tick=True
+Mechanic_Test_C.Default=True
+Mechanic_Test_C.Classes=True
+Mechanic_Test_C.Game=True
+Mechanic_Test_C.GameMode=True
+CrosshairWid_C.Appearance=True
+CrosshairWid_C.Designer=True
+CrosshairWid_C.Input=True
+CrosshairWid_C.Interaction=True
+CrosshairWid_C.Performance=True
+CrosshairWid_C.Layout=True
+CrosshairWid_C.Behavior=True
+CrosshairWid_C.Render Transform=True
+CrosshairWid_C.Accessibility=True
+CrosshairWid_C.Clipping=True
+CrosshairWid_C.Navigation=True
+CrosshairWid_C.Localization=True
+HUD_C.Default=True
+HUD_C.Appearance=True
+HUD_C.Designer=True
+HUD_C.Input=True
+HUD_C.Interaction=True
+HUD_C.Performance=True
+HUD_C.Layout=True
+HUD_C.Behavior=True
+HUD_C.Render Transform=True
+HUD_C.Accessibility=True
+HUD_C.Clipping=True
+HUD_C.Navigation=True
+HUD_C.Localization=True
+HUD2_C.Default=True
+HUD2_C.Appearance=True
+HUD2_C.Designer=True
+HUD2_C.Input=True
+HUD2_C.Interaction=True
+HUD2_C.Performance=True
+HUD2_C.Layout=True
+HUD2_C.Behavior=True
+HUD2_C.Render Transform=True
+HUD2_C.Accessibility=True
+HUD2_C.Clipping=True
+HUD2_C.Navigation=True
+HUD2_C.Localization=True
+HUD3_C.Default=True
+HUD3_C.Appearance=True
+HUD3_C.Designer=True
+HUD3_C.Input=True
+HUD3_C.Interaction=True
+HUD3_C.Performance=True
+HUD3_C.Layout=True
+HUD3_C.Behavior=True
+HUD3_C.Render Transform=True
+HUD3_C.Accessibility=True
+HUD3_C.Clipping=True
+HUD3_C.Navigation=True
+HUD3_C.Localization=True
+TestLevels_C.Default=True
+TestLevels_C.Appearance=True
+TestLevels_C.Designer=True
+TestLevels_C.Input=True
+TestLevels_C.Interaction=True
+TestLevels_C.Performance=True
+TestLevels_C.Layout=True
+TestLevels_C.Behavior=True
+TestLevels_C.Render Transform=True
+TestLevels_C.Accessibility=True
+TestLevels_C.Clipping=True
+TestLevels_C.Navigation=True
+TestLevels_C.Localization=True
+FbxImportUI.Mesh=True
+FbxImportUI.Transform=True
+FbxImportUI.Miscellaneous=True
+FbxImportUI.Material=True
+FbxImportUI.FbxFileInformation=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.Navigation=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
 Object=
 SoundMix="\"Object.SoundClasses.SoundClassEffects\" "
+ThirdPersonCharacter_C="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
+Character="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
+Pawn="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Audio/Bubbleopolis_MAster.Bubbleopolis_Master=1
@@ -444,6 +628,22 @@ SoundMix="\"Object.SoundClasses.SoundClassEffects\" "
 /Game/Audio/Music/ForestMusicBox.ForestMusicBox=1
 /Game/Audio/Music/ForestnoStatic.ForestnoStatic=1
 /Game/Audio/Music/TitleScreen.TitleScreen=1
+/Game/Blueprints/UI/Widgets/MainMenu.MainMenu=1
+/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
+/Game/Blueprints/UI/Widgets/NewWidgetBlueprint.NewWidgetBlueprint=1
+/Game/Blueprints/UI/Widgets/Pause.Pause=1
+/Game/Blueprints/UI/Widgets/MagTimer.MagTimer=1
+/Game/Blueprints/UI/Widgets/QuickSelect.QuickSelect=1
+/Game/Blueprints/UI/Widgets/TestLevels.TestLevels=1
+/Game/Blueprints/Gamemodes/Mechanic_Test.Mechanic_Test=1
+/Game/Blueprints/UI/Widgets/CrosshairWid.CrosshairWid=1
+/Game/Blueprints/UI/Widgets/HUD.HUD=1
+/Game/Blueprints/UI/Widgets/HUD2.HUD2=1
+/Game/Blueprints/UI/Widgets/HUD3.HUD3=1
+/Game/Blueprints/UI/Widgets/HUD4.HUD4=1
+/Game/Blueprints/UI/Widgets/HUD5.HUD5=1
+/Game/Blueprints/UI/Widgets/Settings.Settings=1
+/Game/Geometry/Meshes/MonkeyBars/MonkeyBars.MonkeyBars=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -506,7 +706,7 @@ FrameNumberDisplayFormat=Seconds
 bHideUnrelatedNodes=False
 
 [RootWindow]
-ScreenPosition=X=357.000 Y=240.000
+ScreenPosition=X=624.000 Y=235.000
 WindowSize=X=1285.000 Y=725.000
 InitiallyMaximized=True
 
@@ -524,7 +724,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../Engine/Content/Maps/Templates
+UNR=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/Levels
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBXAnim=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -1242,8 +1442,109 @@ SequencerWidgets.TimeStamp=2021.01.28-02.42.50
 SequencerWidgets.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2021.01.28-02.42.44
 ExternalImagePicker.LastCompileMethod=Unknown
+Voice.TimeStamp=2021.01.28-02.42.53
+Voice.LastCompileMethod=Unknown
+MovieSceneCapture.TimeStamp=2021.01.28-02.42.48
+MovieSceneCapture.LastCompileMethod=Unknown
+MeshBuilder.TimeStamp=2021.01.28-02.42.47
+MeshBuilder.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2021.01.28-02.42.52
+StaticMeshEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Engine/Maps/Templates/Template_Default
+MRUItem0=/Game/Levels/MainMenu
+MRUItem1=/Engine/Maps/Templates/Template_Default
+
+[MessageLog]
+LastLogListing=FBXImport
+
+[FBX_Import_UI_Option_FbxStaticMeshImportData]
+StaticMeshLODGroup=None
+VertexColorImportOption=Ignore
+VertexOverrideColor=(B=255,G=255,R=255,A=255)
+bRemoveDegenerates=True
+bBuildAdjacencyBuffer=True
+bBuildReversedIndexBuffer=True
+bGenerateLightmapUVs=True
+bOneConvexHullPerUCX=True
+bAutoGenerateCollision=True
+bCombineMeshes=False
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ImportNormals
+NormalGenerationMethod=MikkTSpace
+bComputeWeightedNormals=True
+bReorderMaterialToFbxOrder=True
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxSkeletalMeshImportData]
+VertexColorImportOption=Replace
+VertexOverrideColor=(B=0,G=0,R=0,A=0)
+bUpdateSkeletonReferencePose=False
+bUseT0AsRefPose=False
+bPreserveSmoothingGroups=True
+bImportMeshesInBoneHierarchy=True
+bImportMorphTargets=False
+ThresholdPosition=0.000020
+ThresholdTangentNormal=0.000020
+ThresholdUV=0.000977
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ComputeNormals
+NormalGenerationMethod=MikkTSpace
+bComputeWeightedNormals=True
+bReorderMaterialToFbxOrder=True
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxAnimSequenceImportData]
+bImportMeshesInBoneHierarchy=True
+AnimationLength=FBXALIT_ExportedTime
+FrameImportRange=(Min=0,Max=0)
+bUseDefaultSampleRate=False
+CustomSampleRate=0
+bImportCustomAttribute=True
+bDeleteExistingCustomAttributeCurves=False
+bImportBoneTracks=True
+bSetMaterialDriveParameterOnCustomAttribute=False
+MaterialCurveSuffixes=_mat
+bRemoveRedundantKeys=True
+bDeleteExistingMorphTargetCurves=False
+bDoNotImportCurveWithZero=True
+bPreserveLocalTransform=False
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxTextureImportData]
+bInvertNormalMaps=False
+MaterialSearchLocation=Local
+BaseMaterialName=None
+BaseColorName=
+BaseDiffuseTextureName=
+BaseNormalTextureName=
+BaseEmissiveColorName=
+BaseEmmisiveTextureName=
+BaseSpecularTextureName=
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
 
 
