Fixed a weird bug with launching paint
in the third person blueprint there were some true statements that weren't connected properly

--- a/Serotopia_Grey_1/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Serotopia_Grey_1/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -257,7 +257,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Levels
 ContentBrowserTab1.SelectedPaths=/Game/SoapHouse3/SoapHouse3V1
 ContentBrowserTab1.SelectedPaths=/Game/Stairs/Stair_Textures
 ContentBrowserTab1.SelectedPaths=/Game/SoapHouse3
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 None=======
 None=======
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -309,11 +309,11 @@ None=======
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/AOE_Decal
-MRUItem1=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
-MRUItem2=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem3=/Game/Blueprints/AO1E
-MRUItem4=/Game/Levels/testYellow
+MRUItem0=/Game/Levels/testYellow
+MRUItem1=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem2=/Game/Blueprints/AOE_Decal
+MRUItem3=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
+MRUItem4=/Game/Blueprints/AO1E
 MRUItem5=/Game/Blueprints/LightPickupActor_Blueprint
 MRUItem6=/Game/Blueprints/AOE_Decal1
 MRUItem7=/Game/Levels/Forest
@@ -3411,7 +3411,7 @@ ScreenPosition=X=867.000 Y=32.000
 ScreenPosition=X=867.500 Y=32.500
 ScreenPosition=X=555.000 Y=13.500
 ScreenPosition=X=555.200 Y=13.600
-ScreenPosition=X=-1136.000 Y=66.000
+ScreenPosition=X=230.000 Y=70.000
 WindowSize=X=890.000 Y=1030.000
 WindowSize=X=890.000 Y=1034.000
 WindowSize=X=897.000 Y=821.000
@@ -4285,7 +4285,7 @@ ExtrudeCoordsWarning=False
 Warning_EditingDefaultMaterial=False
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=PIE
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
