--- a/Serotopia_Grey_1/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Serotopia_Grey_1/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -67,10 +67,11 @@ LastExecutedLaunchName=DTCBCLW3Y2
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [MRU]
-MRUItem0=/Game/Levels/testYellow
-MRUItem1=/Game/Levels/Forest
+MRUItem0=/Game/Levels/Forest
+MRUItem1=/Game/Levels/testYellow
 MRUItem2=/Game/Levels/Bubbleopolis
 MRUItem3=/Game/Levels/Blue_paint
 MRUItem4=/Game/Levels/Puzzle_Chain_Test_1
@@ -257,7 +258,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Levels
 ContentBrowserTab1.SelectedPaths=/Game/SoapHouse3/SoapHouse3V1
 ContentBrowserTab1.SelectedPaths=/Game/Stairs/Stair_Textures
 ContentBrowserTab1.SelectedPaths=/Game/SoapHouse3
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/UI
 None=======
 None=======
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -300,7 +301,7 @@ LastLevel=/Game/Levels/Forest
 LastLevel=/Game/Levels/MainMenu
 LastLevel=/Game/Levels/TowerInterior
 LastLevel=/Game/Levels/MainMenu
-LastLevel=/Game/Levels/testYellow
+LastLevel=/Game/Levels/Forest
 None=======
 None=======
 None=======
@@ -309,26 +310,26 @@ None=======
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/testYellow
-MRUItem1=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem2=/Game/Blueprints/AOE_Decal
-MRUItem3=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
-MRUItem4=/Game/Blueprints/AO1E
-MRUItem5=/Game/Blueprints/LightPickupActor_Blueprint
-MRUItem6=/Game/Blueprints/AOE_Decal1
-MRUItem7=/Game/Levels/Forest
-MRUItem8=/Game/Blueprints/Mechanic_Test
-MRUItem9=/Game/Blueprints/UI/MainMenu
-MRUItem10=/Game/Blueprints/UI/HUD
-MRUItem11=/Game/Levels/Bubbleopolis
-MRUItem12=/Game/Levels/Blue_paint
-MRUItem13=/Game/Levels/Puzzle_Chain_Test_1
-MRUItem14=/Game/Levels/RedTesting
-MRUItem15=/Game/Levels/TechDemo
-MRUItem16=/Game/Blueprints/UI/TestLevels
-MRUItem17=/Game/Bubbleopolis/NewFolder/Bubble_brick_texture_01_Mat_Inst
-MRUItem18=/Game/Bubbleopolis/meshes/Ground
-MRUItem19=/Game/Bubbleopolis/Ground_Inst
+MRUItem0=/Game/Blueprints/UI/Pause
+MRUItem1=/Game/Levels/Forest
+MRUItem2=/Game/Blueprints/UI/HUD7
+MRUItem3=/Game/Blueprints/UI/HUD6
+MRUItem4=/Game/Blueprints/UI/HUD5
+MRUItem5=/Game/Blueprints/UI/HUD4
+MRUItem6=/Game/Blueprints/UI/HUD3
+MRUItem7=/Game/Blueprints/UI/HUD
+MRUItem8=/Game/Blueprints/UI/HUD2
+MRUItem9=/Game/Levels/testYellow
+MRUItem10=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem11=/Game/Blueprints/AOE_Decal
+MRUItem12=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
+MRUItem13=/Game/Blueprints/AO1E
+MRUItem14=/Game/Blueprints/LightPickupActor_Blueprint
+MRUItem15=/Game/Blueprints/AOE_Decal1
+MRUItem16=/Game/Blueprints/Mechanic_Test
+MRUItem17=/Game/Blueprints/UI/MainMenu
+MRUItem18=/Game/Levels/Bubbleopolis
+MRUItem19=/Game/Levels/Blue_paint
 
 [DetailCategories]
 Brush.TransformCommon=True
@@ -2826,6 +2827,91 @@ AOE_Decal1_C.Replication=True
 AOE_Decal1_C.Collision=True
 AOE_Decal1_C.Input=True
 AOE_Decal1_C.Actor=True
+HUD2_C.Default=True
+HUD2_C.Appearance=True
+HUD2_C.Designer=True
+HUD2_C.Input=True
+HUD2_C.Interaction=True
+HUD2_C.Performance=True
+HUD2_C.Layout=True
+HUD2_C.Behavior=True
+HUD2_C.Render Transform=True
+HUD2_C.Accessibility=True
+HUD2_C.Clipping=True
+HUD2_C.Navigation=True
+HUD2_C.Localization=True
+HUD3_C.Default=True
+HUD3_C.Appearance=True
+HUD3_C.Designer=True
+HUD3_C.Input=True
+HUD3_C.Interaction=True
+HUD3_C.Performance=True
+HUD3_C.Layout=True
+HUD3_C.Behavior=True
+HUD3_C.Render Transform=True
+HUD3_C.Accessibility=True
+HUD3_C.Clipping=True
+HUD3_C.Navigation=True
+HUD3_C.Localization=True
+HUD4_C.Default=True
+HUD4_C.Appearance=True
+HUD4_C.Designer=True
+HUD4_C.Input=True
+HUD4_C.Interaction=True
+HUD4_C.Performance=True
+HUD4_C.Layout=True
+HUD4_C.Behavior=True
+HUD4_C.Render Transform=True
+HUD4_C.Accessibility=True
+HUD4_C.Clipping=True
+HUD4_C.Navigation=True
+HUD4_C.Localization=True
+HUD5_C.Default=True
+HUD5_C.Appearance=True
+HUD5_C.Designer=True
+HUD5_C.Input=True
+HUD5_C.Interaction=True
+HUD5_C.Performance=True
+HUD5_C.Layout=True
+HUD5_C.Behavior=True
+HUD5_C.Render Transform=True
+HUD5_C.Accessibility=True
+HUD5_C.Clipping=True
+HUD5_C.Navigation=True
+HUD5_C.Localization=True
+HUD6_C.Default=True
+HUD6_C.Appearance=True
+HUD6_C.Designer=True
+HUD6_C.Input=True
+HUD6_C.Interaction=True
+HUD6_C.Performance=True
+HUD6_C.Layout=True
+HUD6_C.Behavior=True
+HUD6_C.Render Transform=True
+HUD6_C.Accessibility=True
+HUD6_C.Clipping=True
+HUD6_C.Navigation=True
+HUD6_C.Localization=True
+HUD7_C.Default=True
+HUD7_C.Appearance=True
+HUD7_C.Designer=True
+HUD7_C.Input=True
+HUD7_C.Interaction=True
+HUD7_C.Performance=True
+HUD7_C.Layout=True
+HUD7_C.Behavior=True
+HUD7_C.Render Transform=True
+HUD7_C.Accessibility=True
+HUD7_C.Clipping=True
+HUD7_C.Navigation=True
+HUD7_C.Localization=True
+PanelWidget.Accessibility=True
+PanelWidget.Behavior=True
+PanelWidget.Render Transform=True
+PanelWidget.Performance=True
+PanelWidget.Clipping=True
+PanelWidget.Navigation=True
+PanelWidget.Localization=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2846,7 +2932,7 @@ ActorComponent=
 ActorComponent=
 Object=
 Object=
-Object=
+Object="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 None=======
 None=======
 None=======
@@ -2931,8 +3017,8 @@ Mush_Gnome_C=
 Winter_Gnome_C=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[20]\" "
 ProjectileMovementComponent=
 MovementComponent=
@@ -2971,6 +3057,12 @@ Info=
 TestLevels_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 AO1E_C=
 MainMenu_C=
+HUD2_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+HUD3_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+HUD4_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+HUD5_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+HUD6_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+HUD7_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.TriggerVolume;/Engine/Transient.ActorFactoryBoxVolume_20
@@ -3250,7 +3342,7 @@ None=======
 /Game/Blueprints/UI/CrosshairWid.CrosshairWid=1
 /Game/Blueprints/seeableDisappear_2.seeableDisappear_2=1
 /Game/Blueprints/UI/Settings.Settings=1
-/Game/Blueprints/UI/Pause.Pause=1
+/Game/Blueprints/UI/Pause.Pause=0
 /Engine/EditorBlueprintResources/StandardMacros.StandardMacros=1
 /Game/ParticleSystems/P_PaintSplat.P_PaintSplat=1
 /Game/Geometry/Meshes/SM_Paver_L.SM_Paver_L=1
@@ -3347,6 +3439,13 @@ None=======
 /Game/Player/PlayerCharacterBlue_Inst.PlayerCharacterBlue_Inst=1
 /Game/Player/PlayerCharacterBlue.PlayerCharacterBlue=1
 /Game/Blueprints/AOE_Decal1.AOE_Decal1=1
+/Game/Blueprints/UI/HUD.HUD=0
+/Game/Blueprints/UI/HUD2.HUD2=0
+/Game/Blueprints/UI/HUD3.HUD3=0
+/Game/Blueprints/UI/HUD4.HUD4=0
+/Game/Blueprints/UI/HUD5.HUD5=0
+/Game/Blueprints/UI/HUD6.HUD6=0
+/Game/Blueprints/UI/HUD7.HUD7=0
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
