Updated soundclass called in UI Setting Blueprint
I was having a hard time finding where these sound classes were to update them, Montana showed me, and I believe they should working properly. We'll have to test them out with more SFX to be 100% sure.

--- a/Serotopia_Grey_1/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Serotopia_Grey_1/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -121,7 +121,7 @@ User Created=False
 Advanced=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/UI
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -146,24 +146,24 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Levels/NewWorld
+LastLevel=/Game/Levels/MainMenu
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/NewWorld
-MRUItem1=/Game/Levels/NewMap
-MRUItem2=/Game/Levels/Forest
-MRUItem3=/Game/Blueprints/AOE/Splatter/AOE_Decal1
-MRUItem4=/Game/Blueprints/AOE/Splatter/AOE_Decal
-MRUItem5=/Game/Blueprints/AOE/Projectile/AO1E
-MRUItem6=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem7=/Game/Levels/Bubbleopolis
-MRUItem8=/Game/Bubbleopolis/Current/CombinedMesh/BubsLandIDMap
-MRUItem9=/Game/Geometry/Meshes/MonkeyBars/MonkeyBars
-MRUItem10=/Game/Blueprints/UI/Widgets/TestLevels
-MRUItem11=/Game/Blueprints/UI/Widgets/Settings
+MRUItem0=/Game/Blueprints/UI/Widgets/Settings
+MRUItem1=/Game/Levels/NewWorld
+MRUItem2=/Game/Levels/NewMap
+MRUItem3=/Game/Levels/Forest
+MRUItem4=/Game/Blueprints/AOE/Splatter/AOE_Decal1
+MRUItem5=/Game/Blueprints/AOE/Splatter/AOE_Decal
+MRUItem6=/Game/Blueprints/AOE/Projectile/AO1E
+MRUItem7=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem8=/Game/Levels/Bubbleopolis
+MRUItem9=/Game/Bubbleopolis/Current/CombinedMesh/BubsLandIDMap
+MRUItem10=/Game/Geometry/Meshes/MonkeyBars/MonkeyBars
+MRUItem11=/Game/Blueprints/UI/Widgets/TestLevels
 MRUItem12=/Game/Blueprints/UI/Widgets/MainMenu
 MRUItem13=/Game/Blueprints/UI/Widgets/MagTimer
 MRUItem14=/Game/Blueprints/UI/Widgets/HUD5
@@ -787,6 +787,19 @@ LightmassPrimitiveSettingsObject.Lightmass=True
 Generic.Surface Materials=True
 Generic.Geometry=True
 Generic.Surface Properties=True
+Settings_C.Default=True
+Settings_C.Appearance=True
+Settings_C.Designer=True
+Settings_C.Input=True
+Settings_C.Interaction=True
+Settings_C.Performance=True
+Settings_C.Layout=True
+Settings_C.Behavior=True
+Settings_C.Render Transform=True
+Settings_C.Accessibility=True
+Settings_C.Clipping=True
+Settings_C.Navigation=True
+Settings_C.Localization=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
